styled nav bar and started button

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,8 @@
 // Mixins Here
+
+.customBtn(@color, @width, @height, @bgColor){
+    color:@color;
+    width:@width;
+    height:@height;
+    background-color:@bgColor;
+}
