--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,6 +11,11 @@
     p {
       padding:0 15px;
     }
+
+    img{
+      border-radius: 15px;
+      width: 100%;
+    }
   
   }
 
@@ -58,6 +63,7 @@
       }
 
       .btn {
+        .customBtn(@wild-sand,100px, 40px, @btn-bg-color)
       }
     }
 
@@ -71,5 +77,7 @@
         border-radius: 10px;
       }
     }
+
+
   }
 }// home
