--- a/css/index.css
+++ b/css/index.css
@@ -246,6 +246,11 @@ footer {
   width: 100px;
   height: 40px;
   background-color: #22283A;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  border-radius: 5px;
 }
 .home .walk .walk-img {
   width: 46%;
