--- a/less/home-page.less
+++ b/less/home-page.less
@@ -63,7 +63,12 @@
       }
 
       .btn {
-        .customBtn(@wild-sand,100px, 40px, @btn-bg-color)
+        .customBtn(@wild-sand,100px, 40px, @btn-bg-color);
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        font-size:2rem;
+        border-radius:5px;
       }
     }
 
