finished mobile, started contact page

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,11 @@
     margin: 0 17%;
     background-color:whitesmoke;
 
+    @media @phone{
+        width:100%;
+        margin: 0;
+    }
+
     h1{
         font-size: 3.8rem;
         margin: 2%;
@@ -25,6 +30,10 @@
             text-decoration: none;
             font-size: 1.5rem;
             text-align: center;
+
+            @media @phone{
+                width:18%;
+            }
         }
     }
 }
