--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,12 @@ p {
   margin: 0 17%;
   background-color: whitesmoke;
 }
+@media (max-width: 500px) {
+  .navArea {
+    width: 100%;
+    margin: 0;
+  }
+}
 .navArea h1 {
   font-size: 3.8rem;
   margin: 2%;
@@ -184,6 +190,11 @@ p {
   text-decoration: none;
   font-size: 1.5rem;
   text-align: center;
+}
+@media (max-width: 500px) {
+  .navArea nav a {
+    width: 18%;
+  }
 }
 footer {
   color: #22283B;
@@ -205,6 +216,11 @@ footer {
   border-radius: 15px;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .intro img {
+    border-radius: 10px;
+  }
+}
 .home .space-images {
   display: flex;
   flex-wrap: wrap;
@@ -215,6 +231,18 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images .blast {
+    width: 100%;
+    margin: 0 5%;
+  }
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -232,8 +260,20 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    padding: 0;
+    align-items: center;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 95%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -252,6 +292,17 @@ footer {
   font-size: 2rem;
   border-radius: 5px;
 }
+.home .walk .walk-text .btn:hover {
+  color: #22283A;
+  background-color: #F6F6F6;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 95%;
+    height: 55px;
+    margin: 0 2.5%;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
@@ -260,4 +311,10 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 95%;
+    margin: 0 5%;
+  }
 }
