--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,6 +15,10 @@
     img{
       border-radius: 15px;
       width: 100%;
+
+      @media @phone{
+        border-radius:10px;
+      }
     }
   
   }
@@ -29,6 +33,21 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+    }
+
+    @media @phone{
+      .blast{
+        width:100%;
+        margin: 0 5%;
+      }
+
+      .sky{
+        display:none;
+      }
+
+      .launch{
+        display:none;
+      }
     }
   }
 
@@ -51,8 +70,18 @@
     display: flex;
     justify-content: center;
 
+    @media @phone{
+      flex-direction:column-reverse;
+      padding:0;
+      align-items:center;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone{
+        width:95%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -69,6 +98,16 @@
         justify-content:center;
         font-size:2rem;
         border-radius:5px;
+        &:hover{
+          color:@btn-bg-color;
+          background-color:@wild-sand;
+        }
+
+        @media @phone{
+          width:95%;
+          height:55px;
+          margin: 0 2.5%
+        }
       }
     }
 
@@ -80,6 +119,11 @@
         width: 100%;
         height: auto;
         border-radius: 10px;
+      }
+
+      @media @phone{
+        width:95%;
+        margin: 0 5%;
       }
     }
 
