--- a/less/home-page.less
+++ b/less/home-page.less
@@ -35,6 +35,12 @@
       height: 100%;
     }
 
+    .star{
+      .center;
+      width:50%;
+      margin:0 25%;
+  }
+
     @media @phone{
       .blast{
         width:100%;
