--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,10 @@
   justify-content: center;
   align-items: center;
 }
+.imgWidth {
+  width: 50%;
+  margin: 0 25%;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
